# partages

./: .gitignore  .pre-commit-config.yaml  README.md  logger.py  main.py  make_dedup.sh  make_sourced.sh  pyproject.toml  test-requirements.txt
config/: datasets.yaml  requirements.txt
data/extraction/: config.py  datasets.json  extract.py
datasets/: compress.sh  extract.py
datasets/cas/DEFT-cas-cliniques/: annotation.conf  filehtml-1-cas.ann  filehtml-1-cas.txt  filehtml-146-cas.ann  filehtml-146-cas.txt  filehtml-21-cas.ann  filehtml-21-cas.txt  filehtml-23-cas.ann  filehtml-23-cas.txt  filehtml-24-cas.ann  filehtml-24-cas.txt  filehtml-29-cas.ann  filehtml-29-cas.txt  filehtml-30-cas.ann  filehtml-30-cas.txt  filehtml-31-cas.ann  filehtml-31-cas.txt  filehtml-32-cas.ann  filehtml-32-cas.txt  filehtml-34-cas.ann  filehtml-34-cas.txt  filepdf-1-cas.ann  filepdf-1-cas.txt  filepdf-10-cas.ann  filepdf-10-cas.txt  filepdf-100-cas.ann  filepdf-100-cas.txt  filepdf-101-cas.ann  (+1409 more)
datasets/pxcorpus/: data.txt
loaders/: __init__.py  anses_rcp.py  anses_saisine.py  base_loader.py  bdpm.py  cas.py  cerimes.py  clear.py  cnedimts.py  deft2021.py  deft_21.py  e3c.py  ecdc_tm.py  emea_v3.py  essai.py  frasimed.py  frenchmedMCQA.py  hal.py  has.py  istex.py  mantra_gsc.py  mediqal.py  mqc.py  nachos.py  pxcorpus.py  quaero.py  qualiscope.py  simsamu.py  sisamu.py  transcorpusbiofr.py  utils.py  wikipedia.py  wmt16.py  wmt18_medline.py  wmt_16.py
poc_decorators/: extract.py
preprocessing/: text_cleaning.py
src/: compute_stats.py  deduplicate.py  text_cleaning.py
(+529 files in other folders)
