[project]
name = "partages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "datasets==3.4.1",
    "huggingface_hub==0.29.3",
    "wikipedia-api",
    "datasketch>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
